--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # this means to ignore newlines until "twitter_username:"
  Blog for records and learning.
 # social links
 github_username:  y-forbetter
+baseurl: /blog/
 
 
 show_excerpts: true # set to true to show excerpts on the homepage
